<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hous.hous_aos.ui.rules.RulesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.rules.my_to_do.MyToDoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_today_to_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_rules_today"
                android:textAppearance="@style/B1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="오늘의 " />

            <TextView
                android:id="@+id/tv_today_to_do"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_rules_todo"
                android:textAppearance="@style/B1"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_today"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="to-do" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_my_to_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/cl_today_to_do"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_rules_my"
                android:textAppearance="@style/B2"
                android:textColor="@color/hous_purple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="나의 " />

            <TextView

                android:id="@+id/tv_my_to_do"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_to_do"
                android:textAppearance="@style/B2"
                android:textColor="@color/hous_purple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_my"
                tools:text="to-do" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_rules_check_lightpurple"
                app:layout_constraintBottom_toBottomOf="@id/tv_my_to_do"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_my_to_do"
                app:tint="@color/hous_purple" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_my_to_do"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/cl_my_to_do"
            app:layout_constraintStart_toStartOf="@id/cl_today_to_do"
            app:layout_constraintTop_toBottomOf="@id/cl_today_to_do"
            tools:listitem="@layout/item_rules_my_to_do_item">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>